fix plex deployment

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:5WkV3lHto8FWnPMm1VkZL2Y2XxiscdZi2dDHh2aCpDRRnk53qZc3yOst1PWKORh+wt3teIOwY3axAkIR/Mytr3k=,iv:MM3igFVsDgpxtkEmR5WgAp1+Dd6W6BsLTDHNyuFxqCs=,tag:7CtGPbv12ug0StleIamuuw==,type:comment]
-#ENC[AES256_GCM,data:YLVDHJW/W1mr/yPDb8BFFh2vQp8Y7Afj9EALdl9co58Ne4Ki4EXaDikSYmQ=,iv:FgHkZLyuOT/66NF3toP0YZUG8tpOzc3XEDVs4smLkRQ=,tag:kDcvKS0nurpLpUaNGirY1Q==,type:comment]
-VIP: ENC[AES256_GCM,data:opSk6z25J7VfY9ZF4g==,iv:ZvDKYA4/SDOk9NoMS+WyaMrxAAbsZRgSCQCDKpv3flg=,tag:pAf6D50raU6cju1CrFy3rg==,type:str]
-#ENC[AES256_GCM,data:6vNWCGth92B1jdU+9iH3NNDSD7xRAjmjXLpO,iv:dVUV6oLo+W/PWejdH25eJWmT3v4vbCbN0QhduTQU6h8=,tag:sbJywMMKCaZEDNTQPmC1WQ==,type:comment]
-#ENC[AES256_GCM,data:1HCWmy84hUa78X+/rDuOGAPk+rCT37YYGFXZ7eFdbBatXYxULunbCi9zR2bEoEYpjRm+eBv0fzJ+9oql2fVP5VXHMRcrAwl3soaPbsG7iDuFqEKgJ6GQTMo=,iv:5bzlXnh76vDSrl+Hb2GyCVaNeEEidc7c7agYrnGa8bY=,tag:foAb/XZFIanFQLRnawisyQ==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:Nl3HXXJVDf/wzGDnOEA=,iv:/bB4swC6PJhAXZ7fEXtJiqFkMLl+EQkHbggszAwdADA=,tag:wmD+Pe3mUXUmJ+FCt/xJQw==,type:str]
-#ENC[AES256_GCM,data:K7QdJkwqtGbsE6c8zz0X77x0rBBKRmXTZmKGBH05IAiAoQ==,iv:j4q39aOl+i21bOT5AD9WsDptVA0baNr9oECV9efCKEo=,tag:NdbYNinyM989YOIf2S+y3Q==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:+Z+la68FUKSA8w18ig==,iv:sI+4MH0vt7et32YTtycfaKQmAs/3M+2Dq6+DGtNiieU=,tag:ZYXWCM/bfyF6FjOgEa3RJQ==,type:str]
-#ENC[AES256_GCM,data:HZmYdt05lUuJ6Wf53rE36noJn+f6bsxOSVWSLEBk4xZdRk93OHCN9mxhcxpd8w4=,iv:Vz0FRsO0b5TNehvRojZLfs6MPl+7k2pNaVlMX77M2Qk=,tag:HOv08X7VjT8atye0nd0Ytw==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:h4DVVNj6a1hoCZ5r2uXXyV7krqDPoGWz9So4aB535A==,iv:4SJlBsWo7Gh8x460ZrofmBgQ/tpMCta0MffHDvHSw/Q=,tag:R36IRIvxOwKcrm2Zc1FeDg==,type:str]
-#ENC[AES256_GCM,data:3YlIEQVgb3wbGWlfFnntAxUe92UN19XlHeTV7pZ+8VLn05rh/9FtLK0SLfLEmJa71druMYEOacNrCHW0mjOhoauBUZnZ5fn1UlzDvRI8ViaaxA==,iv:lLZ0sp4qjY4iYlR29ibRisSTkhntHKS0BhIjlOnyjIk=,tag:AAwLrgJge7XjqOwMplmf3A==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:WqqRvbQ+7kJ22ozCB8Sj,iv:4JHVdUCeRjqgkzt/DdqNGSbGmG/jBUrYr/eE7ggBLyk=,tag:yBCtNGxQUbdP+9LxwWnEIg==,type:str]
-#ENC[AES256_GCM,data:ivby1KW0MxSDCLDI/YCPc15yurjppyYx/UXmoJhHjR+L,iv:kj6VSAobl7mDksNgRgErAEfQy8VaF+yO1UCK9QP15DE=,tag:VaWuoX0YN47qtgehX/tInQ==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:kv1iDMdWQcHvq8OtrrAZ,iv:B60FCZmyEnLdvEjQbP5yY5kF/7yq1A1hizwzK1kqSWU=,tag:jnRR0p7Awj6iK4du6AEfAQ==,type:str]
-#ENC[AES256_GCM,data:bXtAbnBTYew1PF/y1TsP2NMSJJBeybck6jryzZfth8/uxVLxOGRBzE6JPmfF3MrbRVm2kHkrnw5DQyRS7a05yON9FxKAPJP/M003GYK4gvM=,iv:yw5KJfGyvRdHxsSNUFjqtOzau0Tm3anD312D7+KMEXA=,tag:5sh0M9758WY6dgzAkU/YRw==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:e9TdWkc3RyF27gyXRT2G,iv:zAPQ6kX0OZXPbgrkq/lnv61KMniWFFz0WvLNbwdyQ2Y=,tag:cNUA4mci1wXVT2ge836ZLA==,type:str]
-#ENC[AES256_GCM,data:0ayyoICnf8X3W5wnLY1bO0Ei73Pe3WUqt60wgwAJb6JpnR0sests76rRUwdTZtQoi64fDIP+5uh4/raUv2UqvdyaSTJm6dZ9N0KTtsyN0zGcqMv2uEo0,iv:OzL1v8IKx86DCswv7OBRBIYV5AyhIo1YmwDJFQGSJXs=,tag:YW1JkHSC4TrlcW+ecdwMbw==,type:comment]
-#ENC[AES256_GCM,data:CT9hSxNCq13Ndrh2n1aR8oqxdvGjwL6HQ8gkV9hJ5RQ9l1vbFpwZ7fCegIP8O2n+JfZKw9tikSbq0hd8X3ctU34JM1pkVEVwWjyGl/866PPq+Q45uzOQWCL9i3oL0S55hRu/t/ssIQx8ScfbPsPRYBNsGBTGyeNwjt9Dxg==,iv:R2ozEJndEJrl85O1jeXHUQhQZi/1kQbBkYAbsxyctj8=,tag:Yc5WouzY/9vkoKKVekbS+Q==,type:comment]
-#ENC[AES256_GCM,data:xFZPuZQgrTvbgCV+6KA1sm7b4eGIH+5R8jidtOI42vGxw35CMx9VQEyqbvVvZTQTwPXGPz9kGK+0UgebbW3j2ngbsjbBjfqeSNWun02ffjs=,iv:qXOPUjiAn2zqVCBZDEJSn3+EmK/CXE9dl1LPZxWmKks=,tag:v4HGex+djBpQbLZg0sMJpw==,type:comment]
-#ENC[AES256_GCM,data:FsEZZD41WxzCKO7eB8K3uACqOL+JMKsaOEgpSxaxB5y1nRxhyP1shcxtzJjGvsGBjLyv04YH,iv:yKnCiJCxYChEUx8qLz1/8zWGPaFhk4VhcokmQ4T4xsM=,tag:EfBRX6zsArau/VAy4YHnRw==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:A+JpCrrkQB/Xkey+,iv:JizC3GxuZzMzC/l+rYETZO7PktGUIGuXK0gIP7Z0N8A=,tag:YA0WlRNSIte1rLVXsRZ1Ig==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:uiR+tEesa7IUAXdRM3zyOGg=,iv:Pj8sQr+884G1aZm4rbn2YTFtCjELXNUb2afiHtsPcyw=,tag:R+I3aqzVGKOa22kJJ6sdAg==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:36YXWPlGMqJLP9fjnfp4Hi8FR1zIu6VzyEvwxqspw7Q=,iv:/fIHDxR847zBsUEC6QCVBfxsFc29bJyv3tm+/cpUx0w=,tag:mqJiirj8iKEhIMjn/h9Ltw==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:AJqG6Ho/skr07PCqNiEAv65ELwKcnftZLw28fHzVhJzItbD0MnbhRQ==,iv:CLNTOkUVP3/OhpQqOOD09hnplVJTW1R+cvyAVkEEBz8=,tag:5itlvZz9XQf3G0/I4NMeJQ==,type:str]
-#ENC[AES256_GCM,data:LwrjYCRh2yACebgY6y4pFja+9kignr+21kM3B+zwe51L7P585hJohEskd9BlOSsiwXYtsMHt+q5baJ1yjKR5pQ==,iv:B89twCGFWMXfF3oemQDhlxZZGRuRQRjYzdtOQH9gABg=,tag:ioQvCGkmg+0xwC4kZ7DRMg==,type:comment]
-#ENC[AES256_GCM,data:ieq2GhEw0uXuAqcUXpBQwgtRo1e1GBFdse3qpWcl3AbjNtuhh9sO9djDyWyACCn2T/qg+JnXVlw=,iv:FdXg0fB7d1dVIed8BYSqUdGMT1zIW+oCbFUnirs7Iw4=,tag:pcgAaw8ccc+mEDKrrAPrmg==,type:comment]
-#ENC[AES256_GCM,data:isaxAO/CSSUA2kfWL+AbTqRy4q/E/qscHA==,iv:+BLjXloTWOuOcfjPGH63KaaRVh+cfOuvOAG30rGhhag=,tag:/jrvEHMPrEUDl32Kc2hYoA==,type:comment]
-#ENC[AES256_GCM,data:hOyi10RO51vSksRjRTOTG6Oef/EJyB5eHxRnkhJ3R+5tX3mR9RJlWGmEb8+GRTCQ5MtD47r/RLxyFpXNfAeCORZvJfLK/ZKCJpZFfBE=,iv:qOd48nSfD80cmpYHuDMTWVZz5eRbKTmaBBey/iJ879k=,tag:yqCkAHTYxyH/XWXrTdmDDw==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:1LzMhpph0Ue/xRLz298Qk4qHAo5+cOBdvYMxsIKUoUJsRtUNM6oegmt9EBWy1UNm,iv:V6dGsICTkL2xxLbWyhN6O1kl352/h3yPdIMdnOhDOYM=,tag:uudlCK4XGfnEAnbZXk5G1g==,type:str]
-#ENC[AES256_GCM,data:JF38d0pjNEd5HEW8FC2qwCvk3gaWBZfqTsakEqOI9NGzLgRS3y0aCnXW0oVxPjg3OuA8uYH6yRSkxypHJBbBgb9UxhkR3DM=,iv:QRg0yX0n+c4mp6T1RjXkDzE1WKsJm5AdPI/7rAMFvxQ=,tag:IOAswRA2nz+WB4erLZ3wEQ==,type:comment]
-#ENC[AES256_GCM,data:IdKaO0RKJ+gtoTTDOGOAU2IoOQ2Ljd9ql0TOl+kXTrREqwjTITdSYixHc6y+/5AU45uJaO23,iv:GPg1vMApioWwh/GGSNsum+Qi5HYdHeCzWPMo9y5P9l8=,tag:21kBs2/1vUzCI6IemDYCsA==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:yWhi+M9vMQ==,iv:NLiWbyGn2vETpQFTlZTb518fSmj1Z5XsvZ1VTcbL794=,tag:FKVA5j7MsvDJ9cFAMrqQSQ==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:Ymt86E26FiWEwt2dpcAEnq+JWmQ=,iv:PkMwWBrR0tTMWCZl5kuRHA0GNRJeQw5v0QDBtQfds7E=,tag:vTNUilXXpO1PovMLR7SvOg==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:2YB5wkmnGpAlVdo=,iv:xr9cDahoJRuncypHNGzbRUPhEkcYb99MYozAZIDYFho=,tag:c470czX8ngM2Mbc7q/dugw==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:XHZOy/T5p1eRWFgloPyi,iv:KWPIIKkacFwPXGahgnK2GkRf/xgsVGwGmS7gXv/2YSs=,tag:ZJNHc/rJhf1PAAYi1E/bFQ==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:PkCj77G57sX6JODSUdeRzHQ3qgED/iZq8g==,iv:Y8LUX03A/4yIYoDnOhENf5dTC2fn4VvF1wNULtMKZGk=,tag:fLrb1IYyKReeD/74seOzKA==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:XBumGCklH9/lKVC/tFTziDoMWbr6oAjs,iv:6yBV7/CYxrrOjYsh/Zq33N8r4H1XWPYeIPcsfQPKcMk=,tag:cvWORGhG4hfbyKvxFMFyFA==,type:str]
-#ENC[AES256_GCM,data:w6bhubrL0Eyi/4MKAXdyiEDFqLEDh4KzM71P50R5+bDOtxYo6gY=,iv:WkBNTc0c7sH5XRgQuI9XZYdraV0Mp0+8mAz1zYPGXLc=,tag:H3LPZcTqddzgDzKobnCt6A==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:vuwWCi7dG9zgJXV7qJEfDQvdBI8=,iv:f47TGifPsnByCW11w8yVsTH54hEUSC2jAOk3wdbrhXQ=,tag:0IAQBBrzkIxZUpBk+GgPaA==,type:str]
-#ENC[AES256_GCM,data:sz8iMqqjtwThS7QauFA=,iv:yGHWnc9yjBGNMp/GRRJIYgTtB/iXKk7q6VsBcTVXra8=,tag:Qn3A1c4ns5q5j/3ZWqUU7w==,type:comment]
-PODNET: ENC[AES256_GCM,data:NgJyyIjvmt2V1PqPiw==,iv:fX0o+SXec5wj0xd9ZUxZOmubFfxTq4LxgIBIySSusbY=,tag:0mYkLd3p+rrA7q+gBhKqIA==,type:str]
-SVCNET: ENC[AES256_GCM,data:9YWHySvOTb6WS3adjw==,iv:h+Frfp1DM88QAysu1sVvWAa8DwdjUH+wC0b/qmvMRkQ=,tag:0nogcdCLufB0a2sZHWzhxQ==,type:str]
+#ENC[AES256_GCM,data:pYUcWE/zQNretMnBeDuMKLnvcltVyTKP7vbuL2F59o3Rgr/k9aiWGiop8KLT7XvQbNLoE3byRxkoHDv7k6HcTT0=,iv:LNn8M4LxSFax0FjV6dn8zWzMkuAg6H+P1o4bujo48ZQ=,tag:QsivgcW9urWHj3kIx6oXGQ==,type:comment]
+#ENC[AES256_GCM,data:soxKq864BNjcUGGJY27FOE3WV6lUVBC99mSchqfWuCvi5eVgpILAxGH7LR0=,iv:E7SdY8+DveaILw8hmfqeHrx8LCWM8fpdcC1ttw7FrNU=,tag:yXgipyVBubCCKHUf2IukTw==,type:comment]
+VIP: ENC[AES256_GCM,data:VGXUIGAbYllTjYUXsg==,iv:8uMJ1nseYY1tQCHWesyknRdynlAZkVyw6fKCECPnvsY=,tag:1H0MHs7w+6QxQl5MtVyW0w==,type:str]
+#ENC[AES256_GCM,data:p8mS8N+0SIectbxFapsOZ0acUoKXNzCvJ+lZ,iv:+0ZWjUZq4r9VrBazURzek6qrDSHMvHpH8D61+gbg5uw=,tag:35j+1gnpDQvNFknTjZ1PxQ==,type:comment]
+#ENC[AES256_GCM,data:8Tw9qknOZZ6wn78OIS8DBEJW+RxDq/f4OPwZYKj+b9d5CzwE+3bryAnVnpg9oGqP0gkfX7erDy5nU4rcwIQ6drsMHUuLgilf2MkL1cOMuUFNpE6b7xgfIVY=,iv:JveSOOr4goEo94d1Av57LHTrggiNAUyxh5n+jqRMCT8=,tag:OZ2infoS2UE3XGfOOKa3dA==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:Crh9n/fRDQlWZoXnlNo=,iv:alF3/9HeDNblu46SewxcawY9uwMItszj6cj11x/lCH8=,tag:7BUCg12QN/YLVsrmi4Mn2g==,type:str]
+#ENC[AES256_GCM,data:TVuvZAdhYakd0TRTkAwPI5EmQlCAiYFMZw8ztt3jAI+3/w==,iv:bhnROyjhaMr+P+5bskiMoI9KYckApw/2nmmM+Th9OJk=,tag:gAW3XpU3uNmyvBvNo327hg==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:GWvEVCb3+tl4UlOqfw==,iv:EU//agUXctJiOj7VFkjrCZ73HOUoJwdqx/DswvmG5JQ=,tag://y1iSyUatV69udW5EzAnA==,type:str]
+#ENC[AES256_GCM,data:DbYWZre9v7DB2TKC1RYZQLn/VuJs4cwMmQTG04EgwWF0CZXFLtRVoCqdQAVfr24=,iv:FVSOQqTb45Lowq7a0Z8Uo67WNYXy/rX102SZAFX9ZGg=,tag:KHA91wwomGnlI74WRPHh8g==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:Cott6ASr0cGihBsRPxrn7wIYKEBiOzQjTME0eAz9Pg==,iv:AK6tH0X8XpB02c5dzCkEj0nC4PlO9TuOaBztkhU7620=,tag:gVSeKhcKznNxDQhhkYNrhw==,type:str]
+#ENC[AES256_GCM,data:2iX736HK9kooR5/+/BX4KAJGmj2li2RP6KjN3cf+puuUPmdxifz4otKyIqmpDiO/Bfhu7JqJi1NIig7n33WKW4D67kiPOlAc5FNOmkTQTpsykA==,iv:ybd58zIGPmlz9iEjn4Sb8hkOhEmthwzPNIFiox4UA0I=,tag:nlVRApQsZT6dUShyP6wtbw==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:i6a2h7bDKnqM3s4GPaia,iv:V+oGwH/ZVCuiotY5yu5o79HZAddP/CoEHI/kvQWVn/E=,tag:oywMxbQDS7gXuGrLar/Z0Q==,type:str]
+#ENC[AES256_GCM,data:338l3wTiBkCwi12IIQueZ8Q3BpAU5sggGta8uYzGZFO4,iv:tIlNhjUXEAO5PjHZ+Bi16E6+pMAYZ9Kqg/15Lh+xb2M=,tag:aNpVbo8jik6294VuHw4u9A==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:b+LnGcdU26ZhSsTpAjFS,iv:wA2A2+zcK+64Pb3fIKdo/n+R6bIuoWfiXhLxFfsHbLo=,tag:MzZlGeZWN/zbfWr58jUC3Q==,type:str]
+#ENC[AES256_GCM,data:GQR3eB0DqmE5f8DQ4lwRnUGy5/xMyHp4jArHlxp5davW2nPHgyejNRfQ4BbjssSrbXaB4C4PTUGhKyiX5hQXKtcBMJYkoz5Es0rP9vo6T+M=,iv:P5DopFd5H1O4ldOWDyT9d5XsG9LQeR6li71ltYwiv5g=,tag:1C/X3Kqx2W7VITNuON+Hdw==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:pwHpKR5/Qu5a7PUMDm4u,iv:KtWa9xDvpEGqnHITz6r9/gcicHDFBB7LV2mZDPNn8Yk=,tag:gNSOP6tVjMk4bANU2GgHCg==,type:str]
+#ENC[AES256_GCM,data:ddByYliyNEKXDq3MECDDRBPb7MIjktQ863VhPese52C8GViICKHZrqV7dGf8EDnk6V/VHWISyv+bZcUlhLRlKSVh5QrdrVc4RX5+3Yzc6gNzrLXJKDXW,iv:IcGoxHjb9SO8iNplJcXUDa4YTD29548qJ/0OxRabUVA=,tag:o0mT5FihbDlXD9Yt5qN4HQ==,type:comment]
+#ENC[AES256_GCM,data:B49+XVkgwWpIVwLSWwLV/o/hDMKdFKfR1RFxNqSGJOxYKQWNJl5RrtJ8WRE7oZdR7jC1p7SkUSXnpP9rInZkum4Yh7obhFtEzepiMp0EnblNgFqrFBUf7gOV9Un1w4to62Ik0tZJ1OrPlx3whoWeLOBs/xFiuOiY5eyoBQ==,iv:9IIJHgWbRVKASbW5Y/E6hnLiKhjAGrBhHSBoOoG79CA=,tag:ymHoMXVjZXzAGsf53Gl9aQ==,type:comment]
+#ENC[AES256_GCM,data:h81m7G1441HDDg5u8vu1P4ClouVt7B+CsROwy7cA+TdLh8lQFrCXmja9UVf88BH/69MAkjp1mm5sLJoCIpBBVEnFeaWW9/DR7mvhxwJhU1c=,iv:+ZFQtfTq568kU7O+2zch0whXIJBXyTVWO1caNx3mapI=,tag:dFcGAS9lEuk0zZ/XJDjbtw==,type:comment]
+#ENC[AES256_GCM,data:EEBEHyqz2j7in4jpRBFZVGqGzWepAAIWdMey+/IeUrSOGqvmJrVb2QymMyewlgSZLE8eGNV7,iv:w67YiAShtYy22urHiNy7tsaeEHikaOnKczhERrZNjXU=,tag:h9rxSfYc67ONHMRONAugIg==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:1IZ44urp4qIlHa/Z,iv:LAr0sdb4bXmprXqkbs4aRS95FOtrpv7g4RTz3RUaVxc=,tag:DunuqdBXY4dwmvA8BGA+EQ==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:z4kPpHyVBStrL2WdgVxTtoA=,iv:jqopqbx6eTOIdY2iTt6v0oJdlkA/5zsOTu3c01lbchs=,tag:AvDzMP4cgLiBJYSVbf3EIA==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:LWuhPGY/RBX3rk89LN4GLWCFg1+pPWMm6Rna0v+x8dA=,iv:Bsgm4JpUPO8h4+cm7uRoc7STnSSeqTCWXvVE6+l503E=,tag:Gxclj1TUEvQJaW+tgVPhtw==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:0RPusXwpTfN4xLcjJ4XTt3INaOqUWkF/U2ocO13/QuoSN7W0P0hesA==,iv:+5YgZ0hWjjnnLBFvRBtnEDb6uNcA9gJfc/APpQQY5d4=,tag:b8SIn0GJ6F7LX2skaT4rdw==,type:str]
+#ENC[AES256_GCM,data:CUIDZW/wmGpe+SGZDnNiRHWlrcZi/84BekJ7Axjc46OErPE/H7iq38lXcf2mhht4omqF0m135JpoJY5iyJ37aA==,iv:+ieqTq2IopPLx2lmPQfOhvatEmJc2OMf8tOlJAIMweM=,tag:qSZO/raA9kUe8x3x2LVW4w==,type:comment]
+#ENC[AES256_GCM,data:0jIwhMc7/dx2YhfcoNO2YGoYgpC33Hjp02kLYBShOPaOTvYh0I23RkQBYC8OKL+D/A6zfH2ei7E=,iv:S2nogdiT6AdUMvl58VFE7OUJykBUA5xvmJAu+kpJ/Gc=,tag:f8ELe2gqDM0TuelptVzuog==,type:comment]
+#ENC[AES256_GCM,data:+o30itxhN60o5GX1Y2cmg5YMP6SYKQe72Q==,iv:YfyLbTUKGq4nobMw1nJgkyHKGZlT1i3SVWwyzcOvsmk=,tag:QiKRVlRYW4RxN+8HQ2olQQ==,type:comment]
+#ENC[AES256_GCM,data:KYIUF0QB4buwzb1pAPSWXCXtjPRNTlG0ztPK9CpdKIV8Z431ESutNNouCkwzzDsbrxTVMubq7CBLgQLzUqHv338z+FTSiBkvHPKdyCU=,iv:+92OIZViJ1PWG+i6FOpKz8l2fnPLwquNaktP154qQyA=,tag:I9MvZT3t5PX2TPvg5IZTCA==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:MhdevvhEBNv0PQhdKBeoWXN+jrRKWp9KU9QiyEqvgigaz+m6q4cQW60qR0rHuU3n,iv:nvHm9Wrvclwx5j3p74KLAVdVo8xPyKBOHh6UL06B+/U=,tag:9iWIjTFJBtlTAhjY+DJ5DQ==,type:str]
+#ENC[AES256_GCM,data:8TMGBLmtRjI3bl16K3rqkT6eeB8cDvdO1Jh4GabD1XpTA5IRMb8LI+7UvQkjIINFX+cgWAEj1qeFY4e0HOybqrLcTZXv4fs=,iv:Ba3WVGQ5YmecGQkDvwk+oIgOVFyvbJWQ+KakrHG10xs=,tag:19t7KVaDqtsnthGzrthcDg==,type:comment]
+#ENC[AES256_GCM,data:V1HhBhSlG+wDTLVS7L6+A68KCGgCNygsNMj0/iIn6hbFz3GEwjVLE35IzL9NS32qW6OxfCsE,iv:+QbCxnTHpWeHHmYBY29xcaF2hUDAGhSHXRaxE/Qpoyg=,tag:azGGnGTIYUm984KHC42Gyw==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:LRcCE0zHcA==,iv:DFVVkssNevSt/pDC3Lk1Iqt0x3LFuj3xuuu1kN/6Nyg=,tag:VqY762FHo2vyN2uz13lBHA==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:OlCajNHn9Zbsry4Wt+x1Wqdq3f8=,iv:tR6ibzBjiuafc0I/lheGeEsNYj7/HxRUn92nfRXkz+Q=,tag:W9LxFWi9yM29uo3afi/hEg==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:SYJXEWGWbmZTsRk=,iv:YkssP9YjXd5J76uuhL5iuamwHPKBDkL2pxilxc0Eftc=,tag:lWVvWklTEowK6bQ1a+RA+A==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:tqgJP/sHTNK6eOTO8CNM,iv:k237GA0UUYf2Okiyf2nvSUbrFQai2TjPq8Z3zo+BIJQ=,tag:GZV98dk6dRTLA7TCwHfqPg==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:LFs8PCoXuFXJUpdxI9Dc8aG9IcvnuY8Xeg==,iv:hei3V1n349NrZvaxnF0glgLsUx9alkYqamE+ASozgd4=,tag:J/jcewFpvcJt04Xjlp0Nvw==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:l/wuBcVQirnWnFiNpaHNx2QmXLtNF1BJ,iv:EJbtfxY2Ke7IDstQfa9RISqwi07A5gDODh27NFRopxM=,tag:uFtv9ONQ2+olvaQOHvw1MQ==,type:str]
+#ENC[AES256_GCM,data:ZMpoDpCFIH7ycwBTAEkZpJNk3gpFKJquR4WcXu22rXT83L0xi7U=,iv:th0EWmxRUV3zG/SMbWal7/AB+LH1n4iFQTyHqahE0LA=,tag:nn5IF3gXxStZdY4gcplT+A==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:IT8WAMx5UVZtAv01cJOu4OmOf4g=,iv:AeO2HqONuM4vNIGEXTlpTNQHVVk8nsfL5AxSghXB6RE=,tag:LNgb4zSKx/9UhQExdA2B9g==,type:str]
+#ENC[AES256_GCM,data:jIztMpBSFxVhiKaX0Vk=,iv:5HC/iG7SiRy8meK2jVQSgyJqnGgDqMh0Uk2tOg2cssk=,tag:LUOApv2pONKSMVgDmc26tw==,type:comment]
+PODNET: ENC[AES256_GCM,data:LivEwPLUFWhprpQjLA==,iv://9pxSHL0yFHEheslxmn0ZQK6/XSB8gcZH0dVBwtXec=,tag:lkwlqxp4dQV4ANjRTsMt7A==,type:str]
+SVCNET: ENC[AES256_GCM,data:E29YoksONVrVdjEGmQ==,iv:ngvLtIriLDjwM8fDO4+8lvtJcy10WDEez+dHGGfjWlg=,tag:JFf17ZMS1suTy1mp9+J/oQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRK05lRHRoSVlUYmZ2YzNs
-            Z2trcXBwQjIxTjQ3alMzV1p4dFYvYVpRNUFvCnorUjZlclNEVWlnMFI1Unp1enBI
-            bTdOdGR1dTVabmxSQ3A4cS95a1ZvT2MKLS0tIGpIalRyc3djZ1VOb044Uno5ZUNQ
-            U1hpckJDRXJIRVAyT29mNFc2SEtBdXMKweOyB1Ml5O1qoPgUYbx2/Qz5Nwr0SOdq
-            xYvvkmNzFBSq0Kx22jqhAbOqXbsR2aK4H1HCBkZTnTha5uSLCcY/FA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAxZlcrQWVGdkk0djh3dlRn
+            NHdWUXNOM3Y2WGFiREVhakFhYThyVzMyazJzCmUrbmhPUFpuaitNQzRhbWtlZ21k
+            OFZRTXBpSnN1VEFhVTFKNzBCUGhmSGsKLS0tIE9WaHVqMm41Q0lsZWdwd3k3OVQx
+            K0JFTy9MSTFwcENlRnFscTF2K2NMaUEKV330Ds9tcVWvYWEx9VAQuH8jnw6cJ9jd
+            wUwInojUsNeFVOPhmlSrnHL404mxJDW7Lc1lwax5zc/K4hDRTkAHYQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-11T20:05:15Z"
-    mac: ENC[AES256_GCM,data:xhU5aZPf3tt1RQnLFIshpB8i7NYNCqDOvAmJL4xBP0RItv6rLvvQe4nl/THaDhXgTEpu4QdNqG/Uh+N0ynUrukhvpq/tmQXyohEyzcHPrOPytWOGHWylTq3dLD1RMOZMCVzTtNHIGDNW8L/DlceBny3yRErzTg411RbtNyG3szc=,iv:jRveiTCYXA438h0cgPS++Myzn9O8S4xwZt58HpGf3ww=,tag:cjT2BMbmq1s4ft+TKENpjQ==,type:str]
+    lastmodified: "2025-01-11T20:06:17Z"
+    mac: ENC[AES256_GCM,data:PVL8XDP883szWWKQNEhDwNezh0kUDvtCm4YS+909Fv/Bw5RDBRHfGq1vD1tveYcBIT6q3xy9+RcWHYzx0PQ7YuWsVCU56IspDj/FJLadM5O9ARn5LBOK++mtgroQEPqOepDtRIhFFqPEtAJNke73mTGz0YDmNfoH7NQO6MbqfSY=,iv:am2yTwKSesjTMX7OmLD7z3CCkdXa8vBeExBgsONmvjk=,tag:vLsnsx4EYmNuvikaPmzHxw==,type:str]
     pgp: []
     version: 3.9.1
