--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:1O2QOBrHEOo21eiEbDCIvwOHvkuBlyAfZxPW5CCVbNRMg7ClHdvxJ2RSRtKv9cyKgz+V5uqql9+cCDQ0ypf42yw=,iv:0W9sYBjESwpyugp8DJM7nXh2PLhWpc6xxILn62p380k=,tag:ZBxFz5gW16nukZRaRkVidQ==,type:comment]
-    #ENC[AES256_GCM,data:h9JpHQehInabNIFUeFTH1JdyH1mc4B0z9lEQ3Qx+b+0AdK5mRU13g59xqvg=,iv:E4+cao228+kPnYad1YJ6fq3ISa7b7zyPRAR/QqWojo0=,tag:9s9EsN2sHYUbTm1/HAMg3g==,type:comment]
-    VIP: ENC[AES256_GCM,data:gBR3MfFI8s9lvwLCGw==,iv:Vw6+Dd5wMmzWIectymuEK54bfzCBY0hS12IM5Ci2yrw=,tag:J7dvM/bRfmC1oKny8Ibbmw==,type:str]
-    #ENC[AES256_GCM,data:30BuyvBEw9PQUfCfMHaGw+wF7ZnXK3rpAh5O,iv:3OgYRM75KOy2kSzv+GrJwuazWZAGtA4gOXhpXHycgq8=,tag:6xmxz7IbmGNkr+/ZRmucgQ==,type:comment]
-    #ENC[AES256_GCM,data:sdZXGTtJF3P7nKdQjAkBzRUOtM0tyR52zPsAh6Ap46vHdxGp3/ydvvdDREa5yZzMSnbMrQdU2wxIZHBwaNXQpKJFGX99bZRU/uDvPt95BKtFf+FP8TBTKsE=,iv:MylE0srTH82xNq0RND2Z9f45kGdxLEq+3FAf2YCOYl4=,tag:tVmM4HoQyXYgNB676l4ZWg==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:0+xieijSNzzxtFjnCd8=,iv:HZ1zaafQeqZuYk2BtdEIE36apA+G+UR2id3YBOM9tZ0=,tag:QJiQGoH/9tA5sQOtrsSS/Q==,type:str]
-    #ENC[AES256_GCM,data:oXg7C1J7QtRNMu9BqcVojXvmPYnWgn0/sBfneIRIgaOlOg==,iv:2/Ua8arVbOcB2ubZSXzLSwKFqotxkEv2OaY3Y5h1fUs=,tag:AxkfBielpaXFZVMOE/OD6g==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:cUGpUsyysDMQYha/4g==,iv:PWdpAdhgoNksP9FHfIxDBhGTxnnxbLT+EU8MM9GY5tQ=,tag:HcEueU6EK7WgWRi5DmmSuA==,type:str]
-    #ENC[AES256_GCM,data:CwiXlQFakszNj+lkXxlWuThONGPlmL9KqsTpbc2vjGcElrXHO5Nz+5LYI3Py03Q=,iv:Mz9MH+5JMtIdkkjeOnN17z64rZ5UHw7Jt/slcSdkPDo=,tag:fL8OkRon0rGD59peuN8ECQ==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:eDthn05YMueZ/CVFi+hqcrVCF4j9GCy0iPZtzDLYag==,iv:r4Y6yGXewBHFy1s9TVoXs11Tuh8nPiUMqXfkF850G1w=,tag:frdprGoT7VxWE9oeIC4JUA==,type:str]
-    #ENC[AES256_GCM,data:HNYAJxr1TlMhS/DZvTw6C5nT+YuXtHLogKPRgJlIiUtjbs1C7R9Dhrvx7kFZ1Ur1HTFIqve+HX8ymvdJp7yXGyDvgAr48cPLhQwSpZ0QQwekVw==,iv:sOJEgHtS+IiuWR5bVMuF4mcwxacFay18lFqK+wgTMXs=,tag:q7b75tSq16kP65tL5CLkuw==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:xdPDuelUwNJ+VN4+MsP+,iv:dx00JU8frvauDfbNN+ongFdTMLGQwsuqdFnXLalipYk=,tag:pZTtv67iSxsWIMr4LfePuQ==,type:str]
-    #ENC[AES256_GCM,data:s9ELZdNjxan5q9TZld/bx6FJM/E1J7V5068fhG7TPlxg,iv:aBl2LjomzXpjbClKFFpN/onEZGxt4yKnH+j1UC4yiho=,tag:sifWmKPeWxjdrfiy8WvPDA==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:GtBPeG2W17h5bmdzdL5Y,iv:ZngmYCN6o2b6BEfCRRtt9m3nJwoQhBEz9xMTFQcGrLs=,tag:hJ/G3ix/G7zU+qEM0QdLqA==,type:str]
-    #ENC[AES256_GCM,data:3+0zaAmaLpDU0wNtfvguFU9gZjdvQXubYr4CZC1U1ilytQf7Elcu6nm+iR7654Bf3ZVl+3/1E4D1lHs3OR3n2/wW/w2lyBby0zKFEwkk+M4=,iv:5FNRvdw5Ke8IaxNyuz33rVme7AUI3GZ/fm50POd/GLc=,tag:tTSXQcI4fU69Jx0Yvv9szw==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:EmZ3ri4SNc8L7IUpRuR3,iv:Wko0uPcm74vFNMbNcOUZni0IsYlzg76Qkb8pTrpGsx8=,tag:Kae2u3FIA6pssqicI4W6TA==,type:str]
-    #ENC[AES256_GCM,data:x+b/tCLYHLO2mV54UAvRB9oen5zhVcUdRzQamdewv3T+9AAzROXvmvsDvVdgXluar3lOVKg9Y0HSaIzAu7A3qjMOYWMuKSMOzVueMyAUh5GPsTe3DWjk,iv:e+00LjzwAzaZdG6kcI6szN8wd1iUaEwz3/4nqPvWrBk=,tag:yJ9ZunJvsUHSfYbjfXe/hw==,type:comment]
-    #ENC[AES256_GCM,data:+487sLzn0wJDPHQccdKs//mNo+3/E2bTSQdszy8QJ13vyd/gL2LXo1VoHvwU+wwviC1huDbOqhuD6gpvW3sAMwHUTOu8eAV85fF4i0lSaYLiU0iNK6uW9Oxnw3hOxqQOVO4CJ16DYnYQeuzrhUYMsVKo5ztybVmevJrncw==,iv:NulzHZxHlKoRZOnzQbHnMrecbgm+COIQ19WxRsNm4Gs=,tag:FbCzRHJNDZITE6KdtJ84PA==,type:comment]
-    #ENC[AES256_GCM,data:OYUtN9cc4/+zW2TBPjSakTT7lTKyWVddumDvVedF5drTVXVCgK0og3j9W6FzjQdy88Klx0+VDwXRLoYFahKYw07MDz99zHpvu97Eol90uKk=,iv:KlBMzGvj6i1jc20l5/Dx0x4cvRQngICr1DtoZ7ovJGs=,tag:Wn3STJcH9dB7LEiJlcME/w==,type:comment]
-    #ENC[AES256_GCM,data:uVK3TErIp3ELEM/oZzS43kL46BOrS8Ki6BQv8n5O4TbBWqBuifsckD73nvYFm/3y4sOlNzwN,iv:SAgg6GnnuPqp0BXXWb5nnWCxmM3kLX/b+1qgPo3hco4=,tag:6vFTrzElSxo622zN8+1KjA==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:9qIFxl3Ce21s2tkm,iv:rpbMO72fGviB8xfli1Ncnlv+64VoX+eSxlc/5zI8BGo=,tag:m0ZRiYfWk/iC4W68m7EQ9Q==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:ok1kszf6dx50b8MHRL9Vt6c=,iv:ao8t08AjLHbTqoEKleLvNxsWXMd/qnrbyKKUbbqhl+M=,tag:y3m1pMCsX8+DLFsOygmHjQ==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:v8k87Me0DBWERg1rmAkMnCrmU9Kim9P/gPHVv+M86JE=,iv:lq7BZwUA2Z60WA0EtS4jYsKRx9EsK413474m5oMsRHk=,tag:Ada2stqiBvBySW9knHEH9A==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:U+ewKJhfuR5qC+WCIu4ZypfyfSFyXP1NSbViwJYqwyfg28Jlq6aCVQ==,iv:0VA8FelvQiwmqgifNMtYnjxT+ugDckL8nnWkWtFqU+4=,tag:xKoltOrMNbaI4lCK8jC0+A==,type:str]
-    #ENC[AES256_GCM,data:CaxsM5y5kwXCyPRPnC+wvwc/cldy25bE4eWCS/aqHR34vdoYQIS39Wqn02/pRQakNXmx0bxxcwSNQxuCBj1TOQ==,iv:23yh3aIkalq5hJT4lfsewyGTmofXFiwIKGeGSifdxnQ=,tag:BIeAus1GvoG8gnSleQLAdg==,type:comment]
-    #ENC[AES256_GCM,data:N63jwfb1ejCF4M1choG8CwII7nrBPWWg3EfKnI5ASUYx53xbFSKjYVKpSy/c2r/+ecePzBMRHBg=,iv:Q3j2QkvaYJItdcjwu7tDQyjmzL+X6Z7tr4nvpiHsSlk=,tag:D59cIbw2i4oVNrQW/MCPCg==,type:comment]
-    #ENC[AES256_GCM,data:hrPwzLq73w2SPmBDEMAjGnGgBrv1/GR8kg==,iv:3wEVvrZLre2kuWzqmTB9Jm0PLkcBh0ANPGPl0DdLFUg=,tag:IDFnab9FmtUzv34SawzNYA==,type:comment]
-    #ENC[AES256_GCM,data:7nVz0FkwCfr8TsIs0HK7Gyn2QuVmhcaHYuXyxbc02Dxvfga6HvhhJixMW8owHj7x4CNPhF+J0AlN6RMJyFxSQBPBjPRibdhbb1JRcIA=,iv:RvU0WLkH+k7CSjemGWnFIBfpmfNe4GIxBuk8Ead/hLE=,tag:i2hSYx7f6/JWDWyUgkKmYw==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:A3mtcwLYJyvCabdSKy31awbHmZx0r0syffvTvVEG6DRzVsf+2U1ZT0TUifPIrYdX,iv:iI0LAqMvPkkHY0BfT2RwVP/3NPTIKPVVfnNegOcSFho=,tag:ZqDRWt6BiRNKoD0PllZLeA==,type:str]
-    #ENC[AES256_GCM,data:m/F62O+SW9l9Jem9CGemAC6votVp4zQ2ACK14OUyDkWVtCC+5Op0Eo14H06GS7O83nl2ERlefi4rdSSnjeracXz4qN92Q4Q=,iv:1sUa9PO+SRP/5ArJ/Bt4JyzXpSMgszjBYtKFqkKH//o=,tag:P20nVepXmbsnk0r34PJzcg==,type:comment]
-    #ENC[AES256_GCM,data:IXW4NV+5XSNOW6EbksceluJhpHN7chdWcERWYxCAxPQkmXlIIRaMnw3U1pW0FEwZ6Bv++axZ,iv:Y0Kctc6aZNyPlfVDVThe3El+gOG8HjX6N3EmRBPQ+OA=,tag:YmhYzw1RRY83FzTTDewA7w==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:2n7cW2zgFA==,iv:MdVQcTMzG9iRjBMpTF2zeRvCfWS128Vp1KB9H3rO4E0=,tag:oU7cGQI40cWn5G3NPF2pmw==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:kExFfG24TfEl4FdTJRg8P++V6CA=,iv:rl7wew300WqV2KRz8/jxDUIzXd0n/oXMj/9aLAaSd1M=,tag:j2Vc6bIeSdAw7NLLLHntBw==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:cpoIDtEQNmzt9m4=,iv:X0KrbvVhPCkPR8e26tETwlU5an0F8drFMvcVCPLlGTw=,tag:bznJuId9VNz4WbkRiouTbw==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:kCIfoDgYfGDZYU3CsSGe,iv:RoFACVTgnRnxCr4p76ZSBtzRsWDoi20IJvrNqN7qRuM=,tag:pZCBLi3xrNpa1GcHNgWhqw==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:7EQ2b8BHFG7JPZZzQho9d3tJf3G8mdrJGw==,iv:lhfaeLqDnp4lLmtlVEfQAUOlInJnclHf8j9CUuo/e4A=,tag:00VhTmFUoCR3xPca5ts65w==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:SI9GpIRY5hdvL5hH8bJsv6j4UXMFlOiC,iv:Q0FR6QvqsPhiGzESxpTJT7syRM+aCg9u+cqEmZxshyA=,tag:oiEu3da11Jh8x0GYb7OOQA==,type:str]
-    #ENC[AES256_GCM,data:g6BNmaB9RxMzNs3Vz24s03nKrGXGRhQ/PooDklYMAklp7aeyGuQ=,iv:xW9T/k8oRwG0Kd5Eoq58KAS1rQVMmb+9Mqm1bL3EpYg=,tag:ijNvYyIdacNPtXkz72zWVg==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:F/ZMhh1zN5GHwq774R8qDZ1r0E0=,iv:q86+SupvPv0nveFJ/2RolLGgNFWLDlp2jeoeJhQ+OYQ=,tag:k+4lnXc8VDjotrEDIfo4dA==,type:str]
-    #ENC[AES256_GCM,data:twy3aQZRDdNIkeQff1U=,iv:LeiXUjgCdysY8n1bJf6J0NEFjWBKF8sLXq8LaTG2h7I=,tag:3pja25MN9ySNpvM+uiRKjg==,type:comment]
-    PODNET: ENC[AES256_GCM,data:2SXjDHxh/5VLUdYefw==,iv:rMiU/hGjXhoJfgugly2TsEdlUemroxlyCdb8upfbFcA=,tag:KyA/fblq1i/znaN3gcin/Q==,type:str]
-    SVCNET: ENC[AES256_GCM,data:NKTXv4tVDJyPK1Suow==,iv:sx6DiM7UxPIrGxnnzAMxC/4UoorHoIDjM6bTiYnDYFA=,tag:JJgOAn+2AIx18tLKfxWAsA==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:0ncT3A==,iv:9DJKhOC4Cr1j4m9BI1wiFL2tQquYHi7ZhqLLC+a6/yI=,tag:/p/a7TUIjmmx4kBa8awk0g==,type:str]
+    #ENC[AES256_GCM,data:taeiKXJi++Fp/f4L3TRytvfPeMVv50OKhMHSSSi99XATemkY06UPtebdjRlLDaUgnkhVJJ5LIygIXYUdZTWAPOc=,iv:4uKsbgp1i+qhBu6HYaJyjm5Ac19VpM1tOA7Wxglhd+Q=,tag:rz9xO6NQNNp264vSCMTlRA==,type:comment]
+    #ENC[AES256_GCM,data:P0pDS3fxW1i/PaN65K+W2b4lffgi6guT/FH2iimyV6lbE7UiwAXmk7gYRRA=,iv:Gj6/sJmEcIJNUAwirObTr4Gm9Zhb/BxXglVVTy6N5Ng=,tag:Fmf5O/TJfqQ10IS8U6T9NA==,type:comment]
+    VIP: ENC[AES256_GCM,data:g//PIuvbKx2lrYclqw==,iv:+d6fMDuYmM/AEOkGugekq+0re8BVuGqSmJv3NvnHtkU=,tag:uFmoGZFi5lkOGGMV7+d1yg==,type:str]
+    #ENC[AES256_GCM,data:Fi2mKYGMs2y2vhzrEtAYro/PIIjsrYY9YFaK,iv:ZAv8eN5k1456Hr0lYb4No3s0uCTCv1TgEUPCkKTJuCA=,tag:LsGMrs8FgVWW7iV5F2GKYw==,type:comment]
+    #ENC[AES256_GCM,data:jcI977Nx0wLsUj3xdum65ogn3G4PghcdFw64nLwlS3r8SHwK04t6qW91CA6px//DXUp5M/KwCKya7VMio6BQrbsEy8br1cf5itve9UzGPcZGzpZh4WjGAgo=,iv:CzhK81F7eTjCmdea4DagO66huCHdqQHuwbmPobSoaWE=,tag:J0Qq6epBmrk2Zk02uM73AA==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:EnwuEaSsKCKrSIdZwAc=,iv:tluQ+or8nk1cD2N9fZEk1M3P7STX+TacVA62F+qKFLs=,tag:/afgO2XDUMmgIL7VP327UQ==,type:str]
+    #ENC[AES256_GCM,data:PgN0Bb7qHxniVVLMJS2R1fte6urHXTT4gGzy8SLhPqgU1A==,iv:JRgB4ueJcIG+fwePx3AAvUtrWCOjkpIUMfGzTqOIS/s=,tag:6w2xixv/9uko0rELOBHIgQ==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:58R+w17BjnbqcBTqwA==,iv:Dmpf+p9PAcYVWHvLhUk4PKdP3KnmorU6sA9Xxe3AVEQ=,tag:ydQcEHMoVBqkopXcWASwOg==,type:str]
+    #ENC[AES256_GCM,data:3EIpn4qCpJnQMI9MEyMg1QARcizrJabKFY4l3f9fRDUArUip+hl1WjyiNywKj9Y=,iv:BZ3f7099gy1K5//l2veciG/OM9BUyHExOEYKfiUUhyg=,tag:2MrM0ooP2aM9HsrU+MOF4Q==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:Km9Yxt55A8i9x0dsEerJktBnnhP7eUucfSN0ELHjWQ==,iv:8resUqTa2B0a5IvUCtP8V+ovMvAbCMHcIYnsaiUHjIs=,tag:v3rzWFP8MpweqV+MWcGteg==,type:str]
+    #ENC[AES256_GCM,data:0vwFSiBhKKxSOyjAJYmeabhjhMiYRZ4/1vZf9nDR5k2hT+HNWTcEYI1oEZ0Xv/NQq44PJ4TX8XDGdthn8gCJeYF4Xi/WI67KWhaRGSKSiIlQgQ==,iv:2paCMIwV4rxgPEXdnhQw6SAeNUwamD8a5QcwjuZuWz8=,tag:bAQ/vTAZFn0BEzbeO00PmQ==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:ZwYl08Wx5CYgDwRjXrCy,iv:bCeM6ayO+qTikKlQBasMWWpgoU6uS++OQlBDMz1uNuI=,tag:peNC7QGB4WTfF0DcAvP7FQ==,type:str]
+    #ENC[AES256_GCM,data:EuK4Lj5JTPe31hxHbQX9ZC7JJ+hD9JTTdhcKuC7n2x3B,iv:BjXlClnhtPf2JHWEUorZVFt1If4wx726ZscpcKOQL1Q=,tag:hdY7anCIiABzsMsDOwtR7w==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:zkAXBOgN5FKBwzNPW0c1,iv:4bzBpGIZgtQfCF2Lm4M35mhtX34ylO7N7LXsFej0ca0=,tag:tlUeHY2frGUtIGHb07ooNQ==,type:str]
+    #ENC[AES256_GCM,data:FZIgfprc0cAX9umgtQZpcxAWjPMf5hmXbUWUWXsek+9ISk2IYHLEGBWLIvzUEwHZUIaxJUE3sV/znx3iC9t8OD9do2LJLNlgqJVawQhtGtc=,iv:0bgxgzuhpuznboDzXNNMSSGU09JAxD3SNAO//cE6eYk=,tag:PzwnZprrjp3SnCVnZGhsDg==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:KInnw+2JQOHTlHdS1aSg,iv:kFQk4iwIV+zzwX6p3fYZfZuOS6fDQtmWuYparrrKaf8=,tag:wLYmLB4ZtHtSNvNtU75hVg==,type:str]
+    #ENC[AES256_GCM,data:cunTcDjsCoeIccsNktbz3HEn+fNPDo4HEMg8fgTvY/A3EEHUrQLjc1Zw/vv1MKeuEbTvDUV2/GtEOUiKjBie8PxTQrhcVq2uu+98R2O75N6BWfrTxyY6,iv:zQDM2sAtsU0jB6u5Bz5WshRQrDizqXrsMjhkdZCHSwI=,tag:zubkVuMwhwMIbQnEqCYo2Q==,type:comment]
+    #ENC[AES256_GCM,data:fUnqTH5ZUNFf2ZFwFRJ+hprJkCjOA7V+sa04pZ7U3/MrkNZRdKeRu47V+a2mFLiqtxZX8A+DxWRE3UuCQebLhPG8euXdlbtTjKIAsDOv/9MFFflFNSHAsE4o1E2nHG8qdTDZ052NBKU+QOPIF3HfwNOlrbk9rHeefouAgA==,iv:aaCyO2QHLeVmlyO1q+sTSt/Hnz1Se22VMp5eRY9UWq8=,tag:w1vyn2fyHchgNldmp87WLQ==,type:comment]
+    #ENC[AES256_GCM,data:E1H2/XBORO0JchBMWkwrFVARU5oQgCh8rcG6tPXG32Pqul774aN/0FUuI208jxzAqGQsklJtQ8XLOrxVFpZtk0+UWo+odK07woyEB7KUfzg=,iv:BpzhRxs+A3EHPQI+0ttlzwaG1uRUc0UcrDU9k+vAVaE=,tag:bIpltxSfD9XmFuYEWhQ3jg==,type:comment]
+    #ENC[AES256_GCM,data:h+czyHsEhr044wjEE7c1gXDLs16ksGXcagtElb5ef517yGO68VDIS+oPBmQoSmdeataDxsU3,iv:ZfVG2frkx6HfDE9oLy8APycHNObvOMcFHszMoNXbfns=,tag:w7j/uYqA0mzIj0ZeVUUT+g==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:7xj4ScZjQEFDUXCS,iv:OvED15129POrPCdsNT8ZvdpOV6F0gPSuldMoQ7ebS90=,tag:CiKmGOwMUqXtutVIbrnkhg==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:aC1D44C7QsHpY5d3pLW1gEo=,iv:ZrztKGp+WFJtabo2LziOjtP+7bUt7jF7QuV+OXNQFgM=,tag:awgihaQX6KlwtTD5WFPMMA==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:3dXATkf8Gg/iK8sCviuWNSRymvWN3r6MEjgHnEIerT0=,iv:5FGtAzKVHagZpQz9z+6afO02PKjrsyadWn2hJpSopu4=,tag:US9lQ/6WSWNKX7y87wJTQg==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:uMGe+kSN6TNa93MwAU238xfZ9bRacvHfCgzfvJNpFyDf6QCSUsD7wQ==,iv:aeboqTwzM8dIhu5rIN1mywJMzK8LyBvBa4I+Fn56gGk=,tag:1SqHKRZdgXywwQPz+xYA3g==,type:str]
+    #ENC[AES256_GCM,data:zjjbhSfWhTLxpsqYresJdioAcNOpIYH9F2WZABZfka2hjXDMxaem/2bqpGJC6oy1SC+u3vsqi33+L44kv1tZDA==,iv:MUEE+Q9Jy1vK+sKwk8m2FV1Re7HFeEpyZ9XIxMhHBxg=,tag:dlrEuGski/FcojJxhFm+/Q==,type:comment]
+    #ENC[AES256_GCM,data:Eq4AgwYxheEGyyXADsFp9Cb3DBzlo/DrroSjHj/KtJqc25Ldttnz9NDfFCI9uUrmHqe+D3qqnyY=,iv:c4rp9HOHkS1Lw44OolQy6zbHkuuV9UV0nUbld1N7T+Y=,tag:2l5/r63y2/eo919BLsujww==,type:comment]
+    #ENC[AES256_GCM,data:JcdlXmMAgAHlKHexOUGW53bfov2Nq1pb7g==,iv:hNrhudGG34kbfepZXwoKAiCLcr9v44psPcD3QT3oWgw=,tag:hTn9xylYDoF7lS3pnP/wdQ==,type:comment]
+    #ENC[AES256_GCM,data:qK7TVM01XQNA4FcuOwj97lVT5ytlfrQawu0X9aeHrEdH72oAFN/rcpArKh9s/68maJjUXX8OsyX8dgjJE5ocu1wWWBBerPohCiurMjc=,iv:zgui8Nb8/0hWlJymbnYbr4Kl46FIdLTmzhF5P6f9fxI=,tag:yDXROPiTWwUfed6T9capDA==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:b13B2Rakwzp5cOnHCyL8BL8s9s0xdoziww+wGKq5FIrr/+ICaEH2GXDRzSOx/8OV,iv:6S3C12ujqKUbnsTQw7SvjuHMdUFEZ0NKxrKZnoBmY+I=,tag:92yOha4dTTrv0f+mA7Go1g==,type:str]
+    #ENC[AES256_GCM,data:7iw9WKHpw/cF/bQK0TkbpRD7idXxM7wBP2tP/ELNVII4WmyfXVeGz+lzilUIOOEgMNd7R4CmKXmZCCMRMBvTcHtDY42vnc4=,iv:sAkM4toSnVI7c8i6ZaCyp3CicUO8aseYZZUEwjqTQS4=,tag:oEMm1wk4Fw9+58GacyF2Vw==,type:comment]
+    #ENC[AES256_GCM,data:W2rsUbfoTGXw708nKKWO6Uz/GPyzy9fur645tDjYTVOmCeKMPQOO+pmQ23OvGENu3zrPig3t,iv:0jZgstO+ttCXHJbBFhEmh/87f2oyyrlca+gg0Ghhlyw=,tag:RQxiCmy+4xm9O1gJF/bPCA==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:5KoTTx4bKg==,iv:XD7HMJ+ezfiCk9c/Go7n0wvlXNjGib4hPfqG8r1FWRM=,tag:xcEFvW/rjRpA/PhcQ+JS9g==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:QrwAq5t70d1rG8ZEfkTmu8NJ57E=,iv:SJAAi4F0KFi7XPnBhmjs2ssSsiiTWy4g5cfVe9f//YE=,tag:P/a9DFsnyg+9EQr/rjitww==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:/h58WlzsO+2euEk=,iv:CoHwmftlbGs4gFNwsM1fZ4iv0xi21JuKBFvCZsqeloc=,tag:2/t4aCaOHnTFPXYCbwmrJQ==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:yXrcvsRImpAjZzTf5qn5,iv:Hd+/IMOfq3Orull0U3ujpB2sLCzugxZ+DcIKXs52xwk=,tag:lySoBKTjcbq9PqIhfTEMIA==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:l9/NeC4Nh5WhDJ6aDO3VLRs8v9Tu5/BLqg==,iv:wiGbTa9mKfxVvVBYHxqnVIoEaxfO3xwgrou45tC8T+4=,tag:7Wn/Be3iYjSxn+cmtX/iUw==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:JzfS25WaDn5TjdC08kHPL2AppHgk5htA,iv:yzpt/ymJKyb3ubFykx4gXeWc5GJwPUYMDmrwbgDvMCc=,tag:8cuM4BKulCCGRHok9fcz0w==,type:str]
+    #ENC[AES256_GCM,data:J/Jzg69FfeCBhGyqC3CzsWznmhq0zmhXJBw1j8+uZuQDYDMPhHU=,iv:iMQfQTB6fx7bT4zZveMoi9c6d7Ya7AKKQePr/fSdsKg=,tag:e5GKE+ASYnetVZUivi0Igw==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:5R9GZLLU/u4hrNybbWk+N3Qmn9U=,iv:6JxsNFFDalbJypm1B5g9Oz6m7bLLy6Q3uElx1nZ5sWQ=,tag:GpHSBBkcCB3hPvD81kcq+g==,type:str]
+    #ENC[AES256_GCM,data:hga7MF62s9nsyrjWvCc=,iv:UXm1WebhZx0pI2SB48/v2NgZ9MeEWyMVy3kEEW8gA/E=,tag:ikOUUWUISg2HH4Jg+hK2+Q==,type:comment]
+    PODNET: ENC[AES256_GCM,data:oBzLQGGnaf+uC0OmqA==,iv:WCeijHysxC/mp/T9bH+0GMqTLRbhI7iFTnB9KxSlZ+g=,tag:U0BVRXrCzcvKHCwJr3pZwQ==,type:str]
+    SVCNET: ENC[AES256_GCM,data:W9uPmadxn7xO6p3JPQ==,iv:GzVqM63/bOB8kogvfKpbYeWm1CqdZ+iU8kWnO8KLdIo=,tag:G9e8OSxkm8ku7Xjps2lBVA==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:wqm+Dg==,iv:126tL9RGIoYi5IONwRPoebC8xF/zEJqjy46GejX+NyM=,tag:X9GtgroP9r8j2hZSh6mcRw==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0cHJiNTB1WlJicVpKNytM
-            cTA3anNjYTZLUzZWdE5yQ0ZBVjcxUzNoWlFnClVoNXRtT1g5TC9aeEh1VStTcmlI
-            NUpTb1FidytBcUhsRW5pejBhVWdqdUUKLS0tIGMxb1poZGV2T3BYaHZNNGtxMGsy
-            V1VFcVB2aWpqZFlEZTdoc1lOMDhuaGcKY6BpiHvN7S1Fj1G9cR2iRaARKQM8LzkM
-            cZ5q5tctkyAJLWyHxVRGmweq4mD1GMAETWu/aNKeAKKDn1X/Y/XEYA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBycHhNcmtQR0djZzQ2VkZk
+            a3cvOXFVeXdlN0VERXhjWFdHeDlDQ0dRYWk4Ck05U0xWNTcra2laTkpESzFaRmww
+            K2VMSithK1ZIelQyTUQ0Wjl4Q1BQb0UKLS0tIFN2eWNUeTNrdmlCaGMyR3p2Umh6
+            N1FsUW5RMHFGVlN5Z1QwczFDVzBqZUUKYYTmrGUNA0PgeNHCCEdME/Xonz6FWNPo
+            Zj+/UYBWCfDdqEe/tjrbqd2XWPWu0uSt9wJB/Kb+avyzssd5duyBWA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-11T20:05:15Z"
-    mac: ENC[AES256_GCM,data:F4GEPnupt2R8z+auuQw4wcNuFQfQ/J7a+Ng8Zknhogwc9XWt1/m2Aep6IAUSBS8tu17rz4mu7JLjRaiBrTedaAGrXbNEWeZQti3HZYrXZtY/h7bGCF59eF7sw9vN2PPkOWVWmG/cabzj5D7SVJo5S78+fP8bNSZNfKqZ4hiWn2A=,iv:cN8X9krgsTWzGmPHrvnpx4x2djiYgsOepY1lLueR4Xg=,tag:36+cWw8Lnf5w1G+qm7xZ7Q==,type:str]
+    lastmodified: "2025-01-11T20:06:17Z"
+    mac: ENC[AES256_GCM,data:3OW/xTuqhQDh8kE4q/pbEzIbcKFT3+zRjbaQ9W+eMhTsOc6nTCLKW2hmCXA+ZX0JfJPtFSQQTRbxYwPA884nJrxfhb2FoZK/+GkxRohDyuBpPp36GC/+fWC1lTYRYFDjW5yMxtFZ7SXbiTSI1qI0rF32MS7KDITgvMRcUxymkjY=,iv:pT4bH2C1bb1tQchQRo11be9pcxJvHEBViU26/53lwM4=,tag:6M8yGiodBlWcj6El1M0ufg==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
